--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
 	<meta charset="UTF-8">
 	<title>Crystal Collector</title>
 
-<!-- jQuery Library -->
- <script src="http://www.google.com/jsapi" type="text/javascript"></script>
+
  
 <!-- <script type="text/javascript">google.load("jquery", "1.3.2");</script> -->
 
 
+<link rel="stylesheet" href="assets/css/reset.css">
 
 <!-- Bootstrap link -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
 <!-- CSS LINK -->
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="assets/css/style.css">
+
+
 
 </head>
 
@@ -70,6 +72,8 @@
 		</div>
 	</div>
 	
-	<script rel="text/javascript" href="game.js"></script>
+	<script src="http://www.google.com/jsapi" type="text/javascript"></script>
+	<script href="/assets/javascript/game.js"></script>
+
 </body>
 </html>
