almost everything is working but still some stuff i need to figure out

--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
 				<br>
 		</div>
 		
-		<div class="randomTargetNumber">
-			<h3>Number To Match:</h3>		
-		</div>
+		<h1 class="randTargetNumber" id="randomTargetNumber">test</h1>		
+		
 
 		<div class="runningTotalScore">
 			<h3>Wins: 
@@ -72,8 +71,8 @@
 		</div>
 	</div>
 	
-	<script src="http://www.google.com/jsapi" type="text/javascript"></script>
-	<script href="/assets/javascript/game.js"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script src="assets/javascript/game.js"></script>
 
 </body>
 </html>
